 *    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 *
 */

Unreleased
    * Allow certain authproc filters to be used in configuration
    * Support method parameter at login
    * Improve handling of invalid xml element names for attributes
    * Minimum supported simplesamlphp version bumped to 1.17
    * debugMode option to display cas ticket xml

2018-07-20 Bjorn Rohde Jensen
    * Release 6.1.0
    * Minimum supported simplesamlphp version bumped to 1.15.
    * Fixed some deprecation warnings by using namespaces to refer to the relevant classes.
    * Added support for using Redis as a ticket store.

2016-08-01 Bjorn Rohde Jensen
    * Release 6.0.0
    * Renamed module from sbcasserver to casserver.
    * Added composer file to make module installable according to simplesamlphp guidelines.
    * Replaced use of deprecated SimpleSAMLphp api's.
    * Fixed a bug when comparing service url parameter to ticket service url, which caused service urls with
        %20 encoded spaces to fail verification.

2014-10-15 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
    * Release 5.2.3
    * Added a missing linefeed character in the CAS 1.0 ticket validation failure response.

2014-03-17 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
    * Release 5.2.2
    * Fixed a bug where the sanitized forms of url parameters were used for more than validation.
    * Fixed a bug in the sanitizer logic to remove ';jsessionid' from urls.

2014-02-27 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
    * Release 5.2.1
    * Fixed a bug where attributes containing colons in their names caused serviceValidate to return invalid xml.

2014-02-25 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
    * Release 5.2.0
    * Removed hardcoded removal of attributes starting with urn:oid.
    * Added a logged in landing page in case the client does not provide a service url.