@@ -23,14 +23,19 @@ $config = [
          //Any service url string matching any of the following prefixes is accepted
         'http://host1.domain:1234/path1',
         'https://host2.domain:5678/path2/path3',
+        // So is regex
+        '|^https://.*\.domain.com/|',
+        // Some configuration options can be overridden
+        'https://override.example.com' => [
+            'attrname' => 'uid',
+            'attributes_to_transfer' => ['cn'],
+        ],
     ],
 
     'legal_target_service_urls' => [
-         //Any target service url string matching any of the following prefixes is accepted
+        //Any target service url string matching any of the following prefixes is accepted
         'http://host3.domain:4321/path4',
         'https://host4.domain:8765/path5/path6',
-        // So is regex
-        '|^https://.*\.domain.com/|'
     ],
 
     'ticketstore' => [
