@@ -29,6 +29,7 @@
  */
 
 use SimpleSAML\Module\casserver\Cas\AttributeExtractor;
+use SimpleSAML\Module\casserver\Cas\ServiceValidator;
 use SimpleSAML\Module\casserver\Cas\Ticket\TicketFactory;
 use SimpleSAML\Module\casserver\Cas\Ticket\TicketStore;
 use SimpleSAML\Configuration;
@@ -46,16 +47,22 @@ $isPassive = isset($_GET['gateway']) && $_GET['gateway'];
 $redirect = !(isset($_GET['method']) && 'POST' === $_GET['method']);
 
 $casconfig = Configuration::getConfig('module_casserver.php');
+$serviceValidator = new ServiceValidator($casconfig);
 
-$legal_service_urls = $casconfig->getValue('legal_service_urls', []);
+if (isset($_GET['service'])) {
+    $serviceCasConfig = $serviceValidator->checkServiceURL(sanitize($_GET['service']));
+    if (isset($serviceCasConfig)) {
+        // Override the cas configuration to use for this service
+        $casconfig = $serviceCasConfig;
+    } else {
+        $message = 'Service parameter provided to CAS server is not listed as a legal service: [service] = ' .
+            var_export($_GET['service'], true);
+        Logger::debug('casserver:' . $message);
 
-if (isset($_GET['service']) && !checkServiceURL(sanitize($_GET['service']), $legal_service_urls)) {
-    $message = 'Service parameter provided to CAS server is not listed as a legal service: [service] = '.
-        var_export($_GET['service'], true);
-    Logger::debug('casserver:'.$message);
-
-    throw new \Exception($message);
+        throw new \Exception($message);
+    }
 }
+
 
 $as = new \SimpleSAML\Auth\Simple($casconfig->getValue('authsource'));
 
